# opengl-playground

./: LICENSE  cabal.project  cabal.project.freeze
.github/workflows/: haskell.yml  libraries.yml
behaviours/: README.md  behaviours.cabal
behaviours/source/Control/Applicative/: Fix.hs
behaviours/source/FRP/: Behaviour.hs  Event.hs
behaviours/tests/FRP/: BehaviourTest.hs  EventTest.hs
executable/: executable.cabal
executable/source/: Main.hs
interface/: interface.cabal
interface/source/Interface/: Display.hs  Mouse.hs
models/: models.cabal
models/source/Model/: Loader.hs  Raw.hs
rendering/: rendering.cabal
rendering/source/Rendering/: Controller.hs  Delta.hs  Display.hs  Program.hs
rendering/source/Rendering/Component/: Camera.hs  Project.hs  Transform.hs
rendering/source/Rendering/Program/: Coloured.hs  Static.hs  Textured.hs
shaders/coloured/: shader.frag  shader.vert
shaders/static/: shader.frag  shader.vert
shaders/textured/: shader.frag  shader.vert
textures/: textures.cabal
textures/source/Texture/: Loader.hs
tmp/models/source/Model/: Loader.hs  Raw.hs  Textured.hs
tmp/rendering/: rendering.cabal
tmp/rendering/source/Rendering/: Delta.hs  Display.hs  Program.hs
tmp/rendering/source/Rendering/Component/: Camera.hs
tmp/rendering/source/Rendering/Program/: Coloured.hs  Textured.hs
tmp/shaders/coloured/: shader.vert
tmp/shaders/textured/: shader.vert
tmp/textures/source/Texture/: Loader.hs
tmp/toolbox/source/Barbies/: Extended.hs
toolbox/: toolbox.cabal
toolbox/source/Control/: Cleanup.hs
variant/: variant.cabal
variant/source/Data/: Variant.hs
variant/tests/Data/: VariantTest.hs
wavefront/: wavefront.cabal
wavefront/source/Data/: OneOf.hs
wavefront/source/Wavefront/: Aggregate.hs  Parser.hs
wavefront/tests/Data/: OneOfTest.hs
wavefront/tests/Wavefront/: AggregateTest.hs  ParserTest.hs
