cabal-version: 3.0
name: behaviours
version: 0.1.0.0

library
  build-depends:
    , base
    , containers
    , primitive
    , witherable
  default-language: Haskell2010
  exposed-modules:
    FRP.Behaviour
    FRP.Event
  ghc-options: -Wall -Wextra -Werror
  hs-source-dirs: source

test-suite behaviours
  build-depends:
    , base
    , containers
    , hedgehog
    , monad-control
    , primitive
    , tasty
    , tasty-hedgehog
    , witherable
  build-tool-depends:
   tasty-discover:tasty-discover
  default-language: Haskell2010
  ghc-options: -Wall -Wextra -Werror
  hs-source-dirs:
    source
    tests
  main-is: Driver.hs
  other-modules:
    FRP.Behaviour
    FRP.BehaviourTest
    FRP.Event
    FRP.EventTest
  type: exitcode-stdio-1.0
