cabal-version: 3.0
name: interface
version: 0.1.0.0

library
  build-depends:
    , base ^>= 4.14
    , behaviours
    , linear ^>= 1.21
    , sdl2 ^>= 2.5
  default-language: Haskell2010
  exposed-modules:
    Interface.Display
    Interface.Mouse
  ghc-options: -Wall -Wextra -Werror
  hs-source-dirs: source
