cabal-version: 3.0
name: models
version: 1.0

library
  build-depends:
    , base ^>= 4.14
    , containers ^>= 0.6
    , exceptions ^>= 0.10
    , GLUtil ^>= 0.10
    , lens ^>= 5.2
    , linear ^>= 1.21
    , OpenGL ^>= 3.0
    , toolbox
  default-language: Haskell2010
  exposed-modules:
    Model.Loader
    Model.Raw
    Model.Textured
  hs-source-dirs: source
