cabal-version: 3.0
name: rendering
version: 1.0

library
  build-depends:
    , base ^>= 4.14
    , bytestring ^>= 0.10
    , containers ^>= 0.6
    , models
    , OpenGL ^>= 3.0
    , sdl2 ^>= 2.5
    , toolbox
  default-language: Haskell2010
  exposed-modules:
    Rendering.Controller
    Rendering.Display
    Rendering.Program
    Rendering.Program.Coloured
    Rendering.Program.Textured
  hs-source-dirs: source
