cabal-version: 3.0
name: variant
version: 0.1.0.0

library
    exposed-modules:
      Data.Variant
    build-depends:
      , base ^>= 4.14
    ghc-options: -Wall -Wextra -Werror
    hs-source-dirs: source
    default-language: Haskell2010

test-suite variant
  build-depends:
    , base
    , variant
    , hedgehog ^>= 1.1
    , hspec ^>= 2.10
    , tasty ^>= 1.4
    , tasty-hspec ^>= 1.2
  build-tool-depends:
   tasty-discover:tasty-discover
  default-language: Haskell2010
  ghc-options: -Wall -Wextra -Werror
  hs-source-dirs: tests
  main-is: Driver.hs
  other-modules:
    Data.VariantTest
  type: exitcode-stdio-1.0
