cabal-version: 3.0
name: wavefront
version: 0.1.0.0

library
    exposed-modules:
      Wavefront.Parser
    build-depends:
      , base ^>= 4.14
      , parsec ^>= 3.1
      , parsec3-numbers ^>= 0.1
      , variant
    ghc-options: -Wall -Wextra -Werror
    hs-source-dirs: source
    default-language: Haskell2010

test-suite wavefront
  build-depends:
    , base
    , hedgehog ^>= 1.1
    , hspec ^>= 2.10
    , parsec
    , parsec3-numbers
    , tasty ^>= 1.4
    , tasty-hedgehog ^>= 1.3
    , tasty-hspec ^>= 1.2
    , variant
  build-tool-depends:
   tasty-discover:tasty-discover
  default-language: Haskell2010
  ghc-options: -Wall -Wextra -Werror
  hs-source-dirs:
    source
    tests
  main-is: Driver.hs
  other-modules:
    Wavefront.Parser
    Wavefront.ParserTest
  type: exitcode-stdio-1.0
