cabal-version: 3.0
name: wavefront
version: 0.1.0.0

library
    exposed-modules:
      Wavefront.Aggregate
      Wavefront.Parser
    build-depends:
      , base
      , containers
      , generic-monoid
      , linear
      , parsec
      , parsec3-numbers
      , vector
    ghc-options: -Wall -Wextra -Werror
    hs-source-dirs: source
    default-language: Haskell2010

test-suite wavefront
  build-depends:
    , base
    , bytestring
    , containers
    , generic-monoid
    , hedgehog
    , hspec
    , linear
    , parsec
    , parsec3-numbers
    , tasty
    , tasty-hedgehog
    , tasty-hspec
    , vector
  build-tool-depends:
   tasty-discover:tasty-discover
  default-language: Haskell2010
  ghc-options: -Wall -Wextra -Werror
  hs-source-dirs:
    source
    tests
  main-is: Driver.hs
  other-modules:
    Wavefront.Aggregate
    Wavefront.AggregateTest
    Wavefront.Parser
    Wavefront.ParserTest
  type: exitcode-stdio-1.0
