cabal-version: 3.0
name: rendering
version: 1.0

library
  build-depends:
    , barbies ^>= 2.0
    , base ^>= 4.14
    , bytestring ^>= 0.10
    , containers ^>= 0.6
    , exceptions ^>= 0.10
    , GLUtil ^>= 0.10
    , keys ^>= 3.12
    , lens ^>= 5.2
    , linear ^>= 1.21
    , models
    , OpenGL ^>= 3.0
    , sdl2 ^>= 2.5
    , toolbox
  default-language: Haskell2010
  exposed-modules:
    Rendering.Component.Camera
    Rendering.Component.Project
    Rendering.Component.Transform
    Rendering.Controller
    Rendering.Delta
    Rendering.Display
    Rendering.Program
    Rendering.Program.Coloured
    Rendering.Program.Textured
  hs-source-dirs: source
